fixed padding for images on books.html and stretched them to fit the card

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -87,7 +87,7 @@ h6 {
 
 .card-img-top {
     width: 100%;
-    height: 320px; /* You can adjust this value to fit your design */
+    height: 400px; /* You can adjust this value to fit your design */
     object-fit: cover; /* This will cover the card area without distorting the aspect ratio */
 }
 
